[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/lasers/laser.gd" type="Script" id=1]
[ext_resource path="res://gameArt/SpaceShooterRedux/PNG/Lasers/laserBlue01.png" type="Texture" id=2]
[ext_resource path="res://audio/soundfx/laser2.wav" type="AudioStream" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "player_laser",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 5.75581
height = 25.6574

[node name="laser" type="Area2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
velocity = Vector2( 0, -500 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "player_laser"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.429277, 0.214638 )
shape = SubResource( 2 )

[node name="Visibility" type="VisibilityNotifier2D" parent="."]

[node name="LaserFX1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -0.5

[connection signal="area_entered" from="." to="." method="_on_laser_area_entered"]
[connection signal="screen_exited" from="Visibility" to="." method="_on_Visibility_screen_exited"]
